--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MeowMedia2"
         tools:targetApi="31">
         <activity
-            android:name=".Settings"
+            android:name=".SettingsActivity"
             android:exported="false" />
         <activity
             android:name=".ReelsActivity"
