--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,22 @@
         android:theme="@style/Theme.MeowMedia2"
         tools:targetApi="31">
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".ReelsActivity"
+            android:name=".activities.ReelsActivity"
             android:exported="false" />
         <activity
-            android:name=".MakePostActivity"
+            android:name=".activities.MakePostActivity"
             android:exported="false" />
         <activity
-            android:name=".ProfilePageActivity"
+            android:name=".activities.ProfilePageActivity"
             android:exported="false" />
         <activity
             android:name=".loginandregistration.RegistrationActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="false" />
         <activity
             android:name=".loginandregistration.LoginActivity"
